--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for scheduler web app",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,52 @@
   "bugs": {
     "url": "https://github.com/Deadrick99/SchedularBack/issues"
   },
-  "homepage": "https://github.com/Deadrick99/SchedularBack#readme"
+  "homepage": "https://github.com/Deadrick99/SchedularBack#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.8.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.8.1",
+    "abbrev": "^1.1.1",
+    "anymatch": "^3.1.3",
+    "balanced-match": "^1.0.2",
+    "bcrypt": "^5.1.0",
+    "binary-extensions": "^2.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "chokidar": "^3.5.3",
+    "concat-map": "^0.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "debug": "^3.2.7",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "fill-range": "^7.0.1",
+    "glob-parent": "^5.1.2",
+    "has-flag": "^3.0.0",
+    "ignore-by-default": "^1.0.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "minimatch": "^3.1.2",
+    "ms": "^2.1.3",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "picomatch": "^2.3.1",
+    "pstree.remy": "^1.1.8",
+    "readdirp": "^3.6.0",
+    "semver": "^5.7.1",
+    "simple-update-notifier": "^1.1.0",
+    "supports-color": "^5.5.0",
+    "to-regex-range": "^5.0.1",
+    "touch": "^3.1.0",
+    "undefsafe": "^2.0.5"
+  }
 }
