--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/Deadrick99/SchedularBack#readme",
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.8.1",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
