--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.ts",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start":"ts-node --esm server.ts"
   },
   "repository": {
     "type": "git",
